--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/fcarlone/node-express-friend-finder#readme",
   "dependencies": {
-    "express": "^4.16.4",
-    "materialize-css": "^1.0.0"
+    "express": "^4.16.4"
   }
 }
